--- a/assets/sass/site/_transition.scss
+++ b/assets/sass/site/_transition.scss
@@ -26,6 +26,7 @@ $no-output: false;
     opacity .6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
   perspective: 800px;
   transform-origin: 50% 100%;
+  will-change: transform;
   
   .hiding & {
     transform: translate3d(0, 33%, 0) scale3d(.975, .975, .975);
